--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
 		"dev": "npm run build && concurrently \"npm run watch:css\" \"npm run watch:js\"  \"nodemon ./src/server.js\"",
 		"build": "npm run build:css && npm run build:js ",
 		"build:js": "webpack --mode production",
-		"watch:css": "node-sass --output-style compressed -o dist/css/ ./src/assets/scss -w",
+		"watch:css": "node-sass --output-style compressed -o public/dist/css/ ./src/assets/scss -w",
 		"watch:js": "webpack --progress -w",
-		"build:css": "node-sass --output-style compressed -o dist/css/ ./src/assets/scss"
+		"build:css": "node-sass --output-style compressed -o public/dist/css/ ./src/assets/scss"
 	},
 	"dependencies": {
 		"express": "^4.17.1"
